# freshenup

./: .gitignore  README.md  RELEASING.md  brew-pick  freshenup  pyproject.toml  renovate.json
.github/workflows/: ci.yml  publish.yml
src/freshenup/: __init__.py  cli.py  models.py  nodes.py  parse.py  pick.py  system.py
tests/: test_cli.py  test_e2e.py  test_nodes.py  test_ownership.py  test_parse.py  test_pick.py
tests/data/: mas.json  mise-outdated.json  outdated_cask.txt  outdated_formula.txt  receipt_beyond_compare.json  receipt_word.json
