[project]
name = "freshenup"
version = "3.1.0"
description = "Pick outdated Homebrew and Mac App Store items to upgrade or uninstall"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Akira Yamamoto" }]
keywords = ["homebrew", "mas", "cli", "macos", "updates"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Software Distribution",
]
dependencies = ["pydantic>=2,<3"]

[project.scripts]
freshenup = "freshenup.cli:main"

[project.urls]
Homepage = "https://github.com/akirayamamoto/freshenup"
Repository = "https://github.com/akirayamamoto/freshenup"
Issues = "https://github.com/akirayamamoto/freshenup/issues"

[dependency-groups]
dev = ["ruff>=0.10", "pyright>=1.1", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freshenup"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: exercises real brew or the installed CLI; needs macOS"]
